Cleanup and fix bugs from full Minecraft test